[gd_scene load_steps=9 format=3 uid="uid://daqyk52il81xc"]

[ext_resource type="Script" uid="uid://c64opyjvamn5p" path="res://UI/Scripts/main_menu.gd" id="1_tk8dj"]
[ext_resource type="Texture2D" uid="uid://ddta046wmyvyh" path="res://Resources/Assets/TitleScreen.png" id="2_tk8dj"]
[ext_resource type="Theme" uid="uid://cjk4ci1au4rg7" path="res://Resources/Themes/main_theme.tres" id="3_ev3b6"]
[ext_resource type="PackedScene" uid="uid://hd2d0o02f711" path="res://Globals/Components/CRT_viewport.tscn" id="4_4cwpn"]
[ext_resource type="PackedScene" uid="uid://cwcdjjpkkcd3e" path="res://UI/Scenes/settings.tscn" id="5_y8e7h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4cwpn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f40uw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ctay"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_tk8dj")

[node name="TitleScreen" type="Sprite2D" parent="."]
position = Vector2(641.749, 360.375)
scale = Vector2(1.25244, 0.704346)
texture = ExtResource("2_tk8dj")

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -741.0
offset_top = -849.0
offset_right = -283.0
offset_bottom = -570.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TitleScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_ev3b6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4cwpn")
text = "Play"

[node name="Control" type="Control" parent="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Quit" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_ev3b6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f40uw")
text = "Quit"

[node name="HBoxContainer2" type="HBoxContainer" parent="TitleScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Settings" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(175, 150)
layout_mode = 2
theme = ExtResource("3_ev3b6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8ctay")
text = "Settings"

[node name="Control2" type="Control" parent="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Shader" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" parent="Shader" instance=ExtResource("4_4cwpn")]

[node name="Settings" parent="Shader" instance=ExtResource("5_y8e7h")]
unique_name_in_owner = true
visible = false

[connection signal="mouse_entered" from="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_pressed_play"]
[connection signal="mouse_entered" from="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_pressed_quit"]
[connection signal="mouse_entered" from="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer2/Settings" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/CenterContainer/VBoxContainer/HBoxContainer2/Settings" to="." method="_on_settings_pressed"]
